--- a/client/templates/ads.html
+++ b/client/templates/ads.html
@@ -1,4 +1,21 @@
 <main class="container">
+
+  <div class="pull-right">
+    <p><a class="btn btn-info" data-toggle="collapse" data-target="#myForm" >New Post</a></p>
+  </div>
+  <ul class="nav nav-pills">
+    <li role="presentation" class="active">
+      <input type="search" class="form-control input-sm search-form" placeholder="Filter">
+    </li>
+    <div class="form-inline">
+      <label for="sort">  Sort by </label>
+      <select class="form-control" id="sort">
+        <option>Some text</option>
+        <option>Some text</option>
+      </select>
+    </div>
+  </ul>
+
   <div class="">
     <p><a class="btn btn-info" data-toggle="collapse" data-target="#myForm" >Create Ad</a></p>
   </div>
