--- a/client/templates/ads.html
+++ b/client/templates/ads.html
@@ -44,7 +44,7 @@
           <input id="image-url" class="form-control" ng-model="$ctrl.ad.item_image" name="image" required>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="btn btn-primary" data-toggle="collapse" data-target="#myForm">
             Create Post
           </button>
         </div>
